# polymarket-structure-arb-bot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: markets.yaml  settings.shadow.yaml  settings.yaml
src/: dashboard_app.py  main.py
src/app/: bootstrap.py  scheduler.py
src/clients/: book_client.py  clob_client.py  gamma_client.py  geoblock_client.py  tick_size_client.py  ws_client.py
src/config/: loader.py
src/dashboard/: __init__.py  data_loader.py
src/domain/: accounting.py  book.py  market.py  order.py  position.py  run.py  signal.py
src/execution/: cancel_manager.py  fill_model.py  order_router.py  pnl_engine.py  quote_manager.py
src/monitoring/: healthcheck.py  notifier.py
src/reporting/: daily_report.py
src/risk/: exposure.py  guardrails.py  kill_switch.py  limits.py
src/storage/: csv_logger.py  sqlite_store.py
src/strategy/: complement_arb.py  filters.py
src/utils/: math_ext.py  price.py  retry.py  stale_diagnostics.py
tests/: test_bootstrap_refresh.py  test_dashboard_app.py  test_dashboard_loader.py  test_execution.py  test_filters.py  test_guardrails.py  test_healthcheck.py  test_main.py  test_pnl_engine.py  test_reporting.py  test_risk.py  test_run_session.py  test_storage_logging.py  test_strategy.py  test_tick_size.py  test_ws_client.py
