[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-structure-arb-bot"
version = "0.1.0"
description = "MVP paper-trading bot for Polymarket YES/NO structure arbitrage"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "black>=24.4.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
